sdl-parser/src/snapshots/sdl_parser__script__tests__parses_sdl_with_events.snap
---
source: sdl-parser/src/script.rs
expression: schema
---
scenario:
  name: test-scenario
  description: some description
  start: "2022-01-20T13:00:00Z"
  end: "2022-01-20T23:00:00Z"
  nodes: ~
  features: ~
  infrastructure: ~
  conditions:
    condition-1:
      command: executable/path.sh
      interval: 30
      source: ~
  vulnerabilities: ~
  capabilities: ~
  metrics: ~
  evaluations: ~
  tlos: ~
  entities: ~
  goals: ~
  injects: ~
  events:
    my-cool-event:
      time: 0.2345678
      conditions:
        - condition-1
      injects:
        - my-cool-inject
  scripts:
    my-cool-script:
      start-time: 602
      end-time: 694800
      speed: 1.5
      events:
        - my-cool-event

