sdl-parser/src/snapshots/sdl_parser__script__tests__parses_sdl_with_scripts.snap
---
source: sdl-parser/src/script.rs
expression: schema
---
name: test-scenario
description: some description
nodes: ~
features: ~
infrastructure: ~
conditions:
  condition-1:
    name: ~
    command: executable/path.sh
    interval: 30
    source: ~
    description: ~
    environment: ~
vulnerabilities: ~
capabilities:
  capability-1:
    name: ~
    description: Can defend against Dirty Cow
    condition: condition-1
    vulnerabilities: ~
metrics: ~
evaluations: ~
tlos: ~
entities: ~
goals: ~
injects:
  my-cool-inject:
    name: ~
    source:
      name: inject-package
      version: "*"
    from-entity: ~
    to-entities: ~
    tlos: ~
    capabilities:
      executive: capability-1
      secondary: ~
    description: ~
    environment: ~
events:
  my-cool-event:
    name: ~
    conditions:
      - condition-1
    injects:
      - my-cool-inject
    description: ~
scripts:
  my-cool-script:
    name: ~
    start-time: 602
    end-time: 694800
    speed: 1.5
    events:
      my-cool-event: 1800
    description: ~
stories: ~

